feat: Spring Security 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/testdb
     username: root
-    password: ${PASSWORD}
+    password: ${PASSWORD:1234}
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 100
@@ -25,3 +25,7 @@ spring:
 # 해당 환경변수는 비밀번호이므로 yml에 저장하면 안되고
 # 따로 Edit Configuration - Environment Variable에서 PASSWORD:1234로 지정
 PASSWORD: 1234
+jwt:
+  keyId: ${ketId:TopOfTheHeadKey}
+  accessTokenExpiration: ${accssTokenMinute:5}
+  refreshTokenExpiration: ${refreshTokenMinute:720}
