refactor: 토큰 제외하기

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,9 +31,9 @@ jwt:
   refreshTokenExpiration: ${refreshTokenMinute:720}
 
 server:
-  port: 8081
+  port: 8083
 
 
-slack:
-  bot-token: ${slack.token:xoxb-9833517009622-9993386658897-qKl07Pqd2EBfIUxXcsMxi1vp}
-  log-channel: ${slack.logchann:C09V7AQEHR7}
+#slack:
+#  bot-token: ${slack.token:xoxb-9833517009622-9993386658897-qKl07Pqd2EBfIUxXcsMxi1vp}
+#  log-channel: ${slack.logchann:C09V7AQEHR7}
